added icon to home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Parstagram</string>
     <string name="username">username</string>
     <string name="password">password</string>
+    <string name="sign_up">Sign up</string>
+    <string name="login">Login</string>
 </resources>
